--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "~2.15.2",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-drawer": "^2.7.0"
+    "react-navigation-drawer": "^2.7.0",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
